[ADDED] Users create endpoint
