# swagger/swagger.json
@@ -1403,6 +1403,49 @@
                         "description": "Not found"
                     }
                 }
+            },
+            "post": {
+                "tags": [ "User" ],
+                "summary": "Create a new user",
+                "operationId": "User_createUser",
+                "consumes": [ "application/json", "text/json" ],
+                "produces": [ "application/json", "text/json" ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/UserReadDTO"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "user",
+                        "in": "body",
+                        "description": "User to be created",
+                        "schema": {
+                            "type": "object",
+                            "items": {
+                                "$ref": "#/definitions/UserCreateDTO"
+                            }
+                        }
+                    }
+                ]
             }
         },
         "/INSO22A/api/users.php?id={id}": {
@@ -1852,6 +1895,88 @@
                 }
             }
         },
+        "UserCreateDTO": {
+            "type" : "object",
+            "properties": {
+                "username": {
+                    "type": "string",
+                    "description": "User's username"
+                },
+                "firstname": {
+                    "type": "string",
+                    "description": "User's first name"
+                },
+                "lastname": {
+                    "type": "string",
+                    "description": "User's last name"
+                },
+                "team": {
+                    "type": "integer",
+                    "description": "Users's team ID"
+                },
+                "birthdate": {
+                    "type": "string",
+                    "description": "User's DOB"
+                },
+                "description": {
+                    "type": "string",
+                    "description": "User's profile description"
+                },
+                "salt": {
+                    "type": "string",
+                    "description": "User's salt"
+                },
+                "password": {
+                    "type": "string",
+                    "description": "User's password"
+                },
+                "qid1": {
+                    "type": "int",
+                    "description": "User's first security question"
+                },
+                "qid2": {
+                    "type": "int",
+                    "description": "User's second security question"
+                },
+                "qid3": {
+                    "type": "int",
+                    "description": "User's third security question"
+                },
+                "qid4": {
+                    "type": "int",
+                    "description": "User's fourth security question"
+                },
+                "qa1": {
+                    "type": "string",
+                    "description": "User's answer to first security question"
+                },
+                "qa2": {
+                    "type": "string",
+                    "description": "User's answer to second security question"
+                },
+                "qa3": {
+                    "type": "string",
+                    "description": "User's answer to third security question"
+                },
+                "qa4": {
+                    "type": "string",
+                    "description": "User's answer to fourth security question"
+                },
+                "nationality": {
+                    "type": "string",
+                    "description": "User's nationality"
+                },
+                "weight": {
+                    "type": "string",
+                    "description": "User's weight"
+                },
+                "height": {
+                    "type": "string",
+                    "description": "User's height"
+                }
+
+            }
+        },
         "UserReadDTO": {
             "type" : "object",
             "properties": {
@@ -1879,13 +2004,9 @@
                     "type": "string",
                     "description": "User's DOB"
                 },
-                "score2": {
-                    "type": "integer",
-                    "description": "Team2's score"
-                },
                 "description": {
                     "type": "string",
-                    "description": "Users's profile description"
+                    "description": "User's profile description"
                 },
                 "status": {
                     "type": "integer",
